# repo-stage

./: .gitignore  LICENSE  README.md  README.zh-CN.md  package.json  pyproject.toml
.github/workflows/: pages.yml
docs/: agent-compatibility.md  development-plan.md  ingestion.md  m4-external-validation.md  m4-verification.md  product-design.md  quality-checklist.md  repo-profile-schema.md  skill-spec.md
examples/fixtures/: public-repos.txt
examples/fixtures/ingestion/: complete-ingestion.json  missing-info-ingestion.json
examples/fixtures/tiny-cli-tool/: LICENSE  README.md  package.json
examples/m4/: README.md
examples/m4/browser-use-browser-use/: README-gap-report.md  repo-profile.json  review-notes.md  validation-report.md
examples/m4/docusealco-docuseal/: README-gap-report.md  repo-profile.json  review-notes.md  validation-report.md
examples/m4/modelcontextprotocol-servers/: README-gap-report.md  repo-profile.json  review-notes.md  validation-report.md
examples/m4/pmndrs-zustand/: README-gap-report.md  repo-profile.json  review-notes.md  validation-report.md
examples/m4/sharkdp-bat/: README-gap-report.md  (+3 more)
examples/outputs/: README.md
fixtures/ingestion/: complete.json  missing-info.json
repo_stage/: __init__.py  cli.py  ingest.py  profile.py
scripts/: generate-m4-examples.mjs  repo-stage-ingest  repo-stage-profile  repo_stage_reports.py
skills/repo-stage/: SKILL.md
src/: repo-profile.js  site-generator.js
tests/: repo-profile.test.js  site-generator.test.js  test_cli.py  test_ingest.py  test_profile.py  test_repo_stage_reports.py
(+65 files in other folders)
